Mantis ChangeLog

2004.xx.xx  -  0.19.0xx



2004.07.07  -  0.19.0a1

This is an alpha version of 0.19.0, it is not recommended for production use.  Users are encouraged to test it on a backup copy of their data and provide feedback to development team.

Users installing Mantis for the first time should sql/db_generate.sql to create the database, then run the http://www.example.com/mantis/admin and run the upgrade scripts.  Already existing users will need to backup their database, then run upgrade.

 * Enh #0000: Change of terminology, replaced "bug" with "issue" [first step in #2710].
 * Enh #0000: Generate one email per user. Stage #2 (minor send mail optimization - used kept alive SMTP connection).
 * Enh #0000: phpMailer 1.71 has been included to Mantis distribution, all the mails are sent now only by phpMailer.
 * Enh #0000: Mass issue manipulation (move, delete, etc.) page now shows list of selected issues.
 * Enh #2200: Add Version to simple bug pages.
 * Enh #3152: Adding notes and documents to resolved bugs.
 * Enh #3164: Added "fixed in version" field, set when resolving a bug.
 * Enh #3300: Add global defaults for priotity and severity of new bugs.
 * Enh #3302: Add global defaults for view state.
 * Enh #3505: Add a Bugnote to a resolved bug.
 * Enh #3519: Advanced filtering with multiple selections.
 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Enh #3638: The bugtracker should be able to produce a changelog.
 * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
 * Enh #3663: Remember filter settings for each project.
 * Enh #3676: Use status threshold rather than hide resolved/closed in filter.
 * Enh #3688: Add threshold for changing the bug/bugnote view status.
 * Enh #3690: Request for directly setting reminders private.
 * Enh #3713: Allow users to set severity levels along with email preferences.