@@ -2,7 +2,8 @@ Mantis ChangeLog
 
 2004.xx.xx  -  0.19.0xx
 
-
+ * Enh #4016: Automatic language selection based on browser preferences
+ * New Config: fallback_language (default 'english') - Fallback language for automatic language selection..
 
 2004.07.07  -  0.19.0a1
 
